# lokilogger

./: .gitignore  README.md  pyproject.toml
example/: example.py
lokilogger/: config.ini  logging.py
tests/: test_loki_logger.py
