[tool.poetry]
name = "lokilogger"
version = "1.0.2"
description = "This a custom `logging` for `Loki`"
authors = ["kangyili", "fbossiere"]
readme = "README.md"
repository = "https://github.com/polynom-company/lokilogger"

[tool.poetry.dependencies]
python = "^3.8"
colorlog = "^6.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
