[tool.poetry]
name = "lokilogger"
version = "1.0.2"
description = "This a custom `logging` for `Loki`"
authors = ["Kangyi LI"]
readme = "README.md"
repository = "https://github.com/polynom-company/lokilogger"

[tool.poetry.dependencies]
python = "^3.8"
colorlog = "^6.6.0"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
types-setuptools = "^57.4.7"

[tool.mypy]
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_configs = "True"
disallow_untyped_calls = "True"
disallow_untyped_defs = "True"
warn_unused_ignores = "True"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
